# mumble-pahelper

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MumblePAHelper.pro  Plugins.cpp  Plugins.h  README  README.md  main.cpp  mumblepahelper.cpp  mumblepahelper.h  mumblepahelper.rc  mumblepahelper.ui
travis-ci/: before_install.bash  script.bash
